--- a/.github/workflows/connections_tests.yml
+++ b/.github/workflows/connections_tests.yml
@@ -76,7 +76,7 @@ jobs:
       fail-fast: false
       matrix:
         ansible-version:
-          - git+https://github.com/ansible/ansible.git@stable-2.17
+          - git+https://github.com/ansible/ansible.git@stable-2.18
           - git+https://github.com/ansible/ansible.git@devel
         os:
           - ubuntu-22.04
@@ -84,19 +84,11 @@ jobs:
           #- ubuntu-16.04
           #- macos-latest
         python-version:
-          - "3.11"
+          - "3.12"
           # - 3.9
           #- 3.6
           #- 3.5
           #- 2.7
-        include:
-          - os: ubuntu-22.04
-            ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: "3.12"
-        exclude:
-          - os: ubuntu-22.04
-            ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: "3.11"
 
     steps:
 
@@ -141,9 +133,6 @@ jobs:
           export PATH=~/.local/bin:$PATH
 
           export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
-          fi
 
           echo $ANSIBLE_CONFIG
           command -v ansible-playbook
@@ -159,6 +148,14 @@ jobs:
 
           ROOT= ./ci/run_connection_test.sh podman
           ROOT=true ./ci/run_connection_test.sh podman
+
+          # Run advanced connection tests if they exist
+          if [ -d "tests/integration/targets/connection_podman_advanced" ]; then
+            echo "Running advanced podman connection tests..."
+            cd tests/integration/targets/connection_podman_advanced
+            ANSIBLECMD=~/.local/bin/ansible-playbook ./runme.sh || echo "Advanced tests skipped or failed"
+            cd -
+          fi
         shell: bash
 
   test-buildah-connection:
@@ -182,18 +179,10 @@ jobs:
           #- macos-latest
         python-version:
           #- 3.9
-          - "3.11"
+          - "3.12"
           #- 3.6
           #- 3.5
           #- 2.7
-        include:
-          - os: ubuntu-22.04
-            ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: "3.12"
-        exclude:
-          - os: ubuntu-22.04
-            ansible-version: git+https://github.com/ansible/ansible.git@devel
-            python-version: "3.11"
 
     steps:
 
@@ -238,9 +227,6 @@ jobs:
           export PATH=~/.local/bin:$PATH
 
           export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
-          if [[ '${{ matrix.ansible-version }}'  == 'ansible<2.10' ]]; then
-            export ANSIBLE_CONFIG=$(pwd)/ci/ansible-2.9.cfg
-          fi
 
           echo $ANSIBLE_CONFIG
           command -v ansible-playbook
@@ -254,6 +240,20 @@ jobs:
           -e ansible_connection=local \
           -e setup_python=false
 
+      - name: Run buildah connection tests
+        run: |
+          export PATH=~/.local/bin:$PATH
+
+          export ANSIBLE_CONFIG=$(pwd)/ci/ansible-dev.cfg
+
           ROOT= ./ci/run_connection_test.sh buildah
           ROOT=true ./ci/run_connection_test.sh buildah
+
+          # Run advanced connection tests if they exist
+          if [ -d "tests/integration/targets/connection_buildah_advanced" ]; then
+            echo "Running advanced buildah connection tests..."
+            cd tests/integration/targets/connection_buildah_advanced
+            ANSIBLECMD=~/.local/bin/ansible-playbook ./runme.sh || echo "Advanced tests skipped or failed"
+            cd -
+          fi
         shell: bash
