--- a/.github/workflows/test-inventory-examples.yml
+++ b/.github/workflows/test-inventory-examples.yml
@@ -7,12 +7,12 @@ on:
 
 jobs:
   examples:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     permissions:
       contents: read
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
+        uses: actions/checkout@v5
 
       - name: Set up Python
         uses: actions/setup-python@v5
@@ -86,22 +86,27 @@ jobs:
           echo "$out" | jq -e '. | to_entries | any(.value.hosts != null and (.value.hosts | length) > 0)'
 
       - name: Run example Node build
-        working-directory: playbook/examples
+        working-directory: playbooks/examples
         run: |
-          ansible-playbook -i localhost, -c local build_node_ai_api.yml -e image_name=ci-ai-node:latest
-          buildah images --format '{{.Name}}:{{.Tag}}' | grep -q '^ci-ai-node:latest$'
+          echo "Python: $(command -v python)"
+          echo "Python version: $(python --version)"
+          echo "Ansible: $(command -v ansible-playbook)"
+          echo "Ansible version: $(ansible --version)"
+
+          ansible-playbook -vvv -i localhost, -c local build_node_ai_api.yml -e image_name=ci-ai-node:latest
+          buildah images --format '{{.Name}}:{{.Tag}}' | grep -q 'ci-ai-node:latest$'
 
       - name: Run example Go multistage build
-        working-directory: playbook/examples
+        working-directory: playbooks/examples
         run: |
-          ansible-playbook -i localhost, -c local build_go_ai_multistage.yml -e image_name=ci-ai-go:latest
-          buildah images --format '{{.Name}}:{{.Tag}}' | grep -q '^ci-ai-go:latest$'
+          ansible-playbook -vv -i localhost, -c local build_go_ai_multistage.yml -e image_name=ci-ai-go:latest
+          buildah images --format '{{.Name}}:{{.Tag}}' | grep -q 'ci-ai-go:latest$'
 
       - name: Run AI env build
-        working-directory: playbook/examples
+        working-directory: playbooks/examples
         run: |
-          ansible-playbook -i localhost, -c local build_ai_env_with_ansible.yml -e image_name=ci-ai-env:latest
-          buildah images --format '{{.Name}}:{{.Tag}}' | grep -q '^ci-ai-env:latest$'
+          ansible-playbook -vv -i localhost, -c local build_ai_env_with_ansible.yml -e image_name=ci-ai-env:latest
+          buildah images --format '{{.Name}}:{{.Tag}}' | grep -q 'ci-ai-env:latest$'
 
       - name: Show resulting images
         run: |
